Complete porting code to Java 11